// PR Assignment Service Database Schema

Table teams {
  id bigserial [primary key]
  team_name varchar(255) [not null, unique]
  created_at timestamp [not null, default: `now()`]
  
  indexes {
    team_name
  }
}

Table users {
  id bigserial [primary key]
  user_id varchar(255) [not null, unique]
  username varchar(255) [not null]
  team_id bigint [not null, ref: > teams.id]
  is_active boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  
  indexes {
    user_id
    team_id
    (team_id, is_active)
  }
}

Table pull_requests {
  id bigserial [primary key]
  pull_request_id varchar(255) [not null, unique]
  pull_request_name varchar(255) [not null]
  author_id varchar(255) [not null, ref: > users.user_id]
  status varchar(20) [not null, default: 'OPEN']
  created_at timestamp [not null, default: `now()`]
  merged_at timestamp [null]
  
  indexes {
    pull_request_id
    author_id
    status
  }
  
  Note: 'Status can be OPEN or MERGED'
}

Table pr_reviewers {
  id bigserial [primary key]
  pull_request_id varchar(255) [not null, ref: > pull_requests.pull_request_id]
  user_id varchar(255) [not null, ref: > users.user_id]
  assigned_at timestamp [not null, default: `now()`]
  
  indexes {
    pull_request_id
    user_id
    (pull_request_id, user_id) [unique]
  }
}
